src/objects/Data_Asset_Contact__c.object
<CustomObject>
    <description>Join object relating RWE Data Assets to Contacts</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>RWE_Data_Asset_Contacts_DF</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DataLoad_ID__c</fullName>
        <externalId>true</externalId>
        <label>DataLoad ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Asset__c</fullName>
        <label>Data Asset</label>
        <referenceTo>Data_Asset__c</referenceTo>
        <relationshipLabel>Data Asset Contacts</relationshipLabel>
        <relationshipName>RWE_Data_Asset_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Data Asset Contact</label>
    <nameField>
        <displayFormat>RWE-DC-{000000000}</displayFormat>
        <label>Data Asset Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Asset Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>